# mcp_server

./: .gitignore  Dockerfile  README.md  install_registry.sh  mcp_servers_config.json  pyproject.toml  setup.sh
assets/: template.html
src/bst_mcp_server/: SaturationCalculator.py  aoe_graph.py  bst_chat.py  bst_hr_mcp_server.py  bst_oa.py  bst_pm_info_mcp_server.py  bst_pm_server.py  bst_pm_workload_mcp_server.py  calworkday_cache.py  config_util.py  critical_task_project.py  data_processor.py  gantt_chart.py  holiday_util.py  http_utils.py  human_efficiency.py  mcp_resource_factory.py  project_issue_cache.py  redis_utils.py
src/bst_mcp_server/config/: jira_task_field_mapping.json  mcp_servers_config.json
visualizations/: critical_path_WORK.html
